tests/machine/x/go/membership.go
//go:build ignore

package main

import (
    "fmt"
)

func main() {
    nums := []int{1, 2, 3}
    fmt.Println(2 in nums)
    fmt.Println(4 in nums)
}
